--- a/style.css
+++ b/style.css
@@ -3,10 +3,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
 input {
   border: none;
   outline: none;
   border-radius: 5px;
+  text-align: center;
 }
 body {
   overflow-x: hidden;
